<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_home"
            android:icon="@drawable/home"
            android:title="@string/navigation_drawer_menu_home" />
        <item
            android:id="@+id/navigation_drawer_my_reviews"
            android:icon="@drawable/list"
            android:title="@string/navigation_drawer_menu_my_reviews" />
        <item
            android:id="@+id/navigation_drawer_notification"
            android:icon="@drawable/notification_checked"
            android:title="@string/navigation_drawer_menu_notification" />
        <item
            android:id="@+id/navigation_drawer_setting"
            android:icon="@drawable/setting"
            android:title="@string/navigation_drawer_menu_setting"
            android:visible="false"/>
    </group>
    <group
        android:id="@+id/navigation_drawer_group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_about"
            android:icon="@drawable/about"
            android:title="@string/navigation_drawer_menu_about" />
    </group>
    <!--<item-->
    <!--android:id="@+id/navigation_subheader"-->
    <!--android:title="others">-->
    <!--<menu>-->
    <!--<group android:checkableBehavior="single">-->
    <!--<item-->
    <!--android:id="@+id/navigation_sub_item_1"-->
    <!--android:icon="@drawable/drawer_shadow"-->
    <!--android:title="navigation_sub_item_1" />-->
    <!--<item-->
    <!--android:id="@+id/navigation_sub_item_2"-->
    <!--android:icon="@drawable/ic_drawer"-->
    <!--android:title="navigation_sub_item_2" />-->
    <!--</group>-->
    <!--</menu>-->
    <!--</item>-->

</menu>