<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:paddingBottom="5dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/yilong"
                android:scaleType="fitXY"
                android:src="@drawable/yi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/repeat_header"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="false"
            android:layout_below="@id/header"
            android:orientation="vertical">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:text="@string/signin_account" />-->

            <!--<EditText-->
            <!--android:id="@+id/signin_account"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:singleLine="true" >-->
            <!--</EditText>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <AutoCompleteTextView
                android:id="@+id/signin_account_autocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:hint="@string/signin_account"
                />
            </android.support.design.widget.TextInputLayout>
            <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:id="@+id/signin_account_spinner" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:singleLine="true"-->
                <!--android:text="@string/signin_password" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:maxLines="1"
                    android:hint="@string/signin_password"/>
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/signin_remember_password_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/signin_remember_password" />

            <Button
                android:id="@+id/signin_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:text="@string/signin_login_button"
                android:enabled="false"/>

            <TextView
                android:id="@+id/signin_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/signin_signup_hypbt"
                android:textColor="#8042f4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signin_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/signin_forgot_password_hypbt"
                android:textColor="#8042f4"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>